# pqtorus

./: .gitignore  ANDROID_IMPLEMENTATION.md  GITHUB_PAGES_FIX.md  MATHEMATICAL_FORMULAS.md  PYODIDE_INTEGRATION.md  README.md  build.gradle.kts  bundle_python.py  settings.gradle.kts  test-deployment-workflow.md  test-deployment.md  test_web_integration.py
.github/workflows/: android-build.yml  deploy-preview.yml
copilot-fix-15/: index.html
copilot-fix-15/assets/: index-B1nFybx9.js  index-HymOs3Mu.js
copilot-fix-15/python/: pqtorus_web_simple.py
copilot/fix-15/: index.html
copilot/fix-15/assets/: index-DoMfTNZW.js
copilot/fix-15/python/pqtorus/: __init__.py  invariants.py  projection.py
core/: build.gradle.kts
core/src/commonMain/kotlin/: Complex.kt  TorusGenerator.kt
core/src/commonTest/kotlin/: TorusGeneratorTest.kt
core/src/wasmJsMain/kotlin/: WasmApi.kt
main/: index.html
main/assets/: index-D7w9n50o.js
python/: IMPLEMENTATION_SUMMARY.md  README.md  demo.py  pyproject.toml  requirements.txt
python/src/pqtorus/: elliptic.py  lattice.py
python/tests/: test_elliptic.py  test_invariants.py  test_lattice.py
web/: build-android.sh  capacitor.config.ts  index.html  package-lock.json  package.json  test-android-setup.sh  vite.config.ts
web/android/app/: build.gradle
web/public/python/: pqtorus_combined.py  pqtorus_web_simple.py
web/src/: App.tsx  index.css
web/src/components/: ControlPanel.tsx  StatusBar.tsx  TorusVisualization.tsx
web/src/utils/: ellipticMath.ts  primes.ts  pyodide.ts  torusGenerator.ts
(+14 files in other folders)
